# transdoc

./: README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
tests/: __init__.py  error_test.py  parsing_test.py
tests/data/: module.py
tests/rules/: __init__.py  attributes_test.py  file_contents_test.py
transdoc/: __consts.py  __init__.py  __main__.py  __processor.py  __transformer.py  errors.py
transdoc/__cli/: __init__.py  mutex.py
transdoc/cli/: __init__.py
transdoc/rules/: __attributes.py  __file_contents.py  __init__.py
